fiexed hover and focus nav span

--- a/app/scss/assets/_reset.scss
+++ b/app/scss/assets/_reset.scss
@@ -14,10 +14,10 @@ html {
     box-sizing: inherit;
 }
 
-input::-moz-focus-inner,
-button::-moz-focus-inner {
-    border: 0;
-}
+// input::-moz-focus-inner,
+// button::-moz-focus-inner {
+//     border: 0;
+// }
 
 html,
 body,
