--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -103,13 +103,13 @@
     }
     &:focus {
       outline: none;
-      background: #242c33;
-      color: color('primary');
+      background: color('active');
+      color: #242c33;
       box-shadow: 0px 5px 9px #000;
       .icon {
-        background: url('../img/down-arrow.png');
+        background: url('../img/down-arrow-black.png');
         @media screen and (min-width: 3840px) {
-          background: url('../img/down-chevron.png');
+          background: url('../img/down-chevron-big-black.png');
           width: 0.8em;
           height: 0.7em;
         }
