--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -6,4 +6,5 @@
 @import 'assets/base-assets/card.scss';
 @import 'assets/base-assets/description.scss';
 @import 'assets/base-assets/collection.scss';
+@import 'assets/base-assets/catalogue.scss';
 @import 'assets/base-assets/time.scss';
