--- a/app/scss/assets/base-assets/content.scss
+++ b/app/scss/assets/base-assets/content.scss
@@ -7,6 +7,23 @@
     width: 100%;
     overflow: hidden;
     padding: 20px 0;
+    height: 378px;
+    @media screen and (max-width: 3840px) {
+      height: 1095px;
+    }
+    @media screen and (max-width: 2048px) {
+      height: 497px;
+    }
+    @media screen and (max-width: 1920px) {
+      height: 425px;
+    }
+    @media screen and (max-width: 1366px) {
+      height: 394px;
+    }
+    @media screen and (max-width: 1280px) {
+      height: 346px;
+    }
   }
 }
 // EEND: content
+
