--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -116,8 +116,7 @@
       }
     }
     span {
-      display: inline-block;
-      vertical-align: middle;
+      display: inline;
     }
     .icon {
       width: 1em;
