--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -85,8 +85,12 @@ body {
             background: url('../img/ruble-currency-sign-black.png');
             @media screen and (min-width: 3840px) {
                 background: url('../img/ruble-currency-sign-big-black.png');
-                width: 32px;
-                height: 32px;
+                width: 30px;
+                height: 30px;
+            }
+            @media screen and (min-width: 2048px) {
+                width: 16px;
+                height: 16px;
             }
         }
     }
@@ -97,10 +101,14 @@ body {
       box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            @media screen and (min-width: 2048px) {
+                width: 16px;
+                height: 16px;
+            }
             @media screen and (min-width: 3840px) {
                 background: url('../img/ruble-currency-sign-big-black.png');
-                width: 32px;
-                height: 32px;
+                width: 30px;
+                height: 30px;
             }
         }
     }
@@ -110,10 +118,14 @@ body {
         box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            @media screen and (min-width: 2048px) {
+                width: 16px;
+                height: 16px;
+            }
             @media screen and (min-width: 3840px) {
                 background: url('../img/ruble-currency-sign-big-black.png');
-                width: 32px;
-                height: 32px;
+                width: 30px;
+                height: 30px;
             }
         }
     }
@@ -128,12 +140,23 @@ body {
         display: block;
         transition: all 0.15s ease-in;
         display: inline-block;
+        background-size: cover;
+        @media screen and (min-width: 2048px) {
+            width: 16px;
+            height: 16px;
+        }
         @media screen and (min-width: 3840px) {
             background: url('../img/ruble-currency-sign-big-light.png');
-            width: 32px;
-            height: 32px;
+            width: 30px;
+            height: 30px;
+        }
+        @media screen and (max-width: 1366px) {
+            width: 11px;
+            height: 11px;
         }
     }
 }
+
+
 
 /*END:base*/
