--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -83,6 +83,7 @@ body {
         box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            background-size: contain;
             @media screen and (min-width: 3840px) {
                 background: url('../img/ruble-currency-sign-big-black.png');
                 width: 30px;
@@ -101,6 +102,7 @@ body {
       box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            background-size: contain;
             @media screen and (min-width: 2048px) {
                 width: 15px;
                 height: 15px;
@@ -140,7 +142,7 @@ body {
         display: block;
         transition: all 0.15s ease-in;
         display: inline-block;
-        background-size: cover;
+        background-size: contain;
         @media screen and (min-width: 2048px) {
             width: 15px;
             height: 15px;
