--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -45,17 +45,16 @@ body {
 .content-container {
     width: 69em;
     position: absolute;
-    top: 3em;
+    top: 11em;
     left: 50%;
-    transform: translate(-50%, 10em);
+    transform: translateX(-50%);
     z-index: 9;
     @media screen and (min-width: 3840px) {
         width: 176em;
     }
     @media screen and (max-width: 1366px) {
         width: 53.2em;
-        top: 0;
-        transform: translate(-50%, 3em);
+        top: 3em;
     }
     @media screen and (max-width: 1110px) {
         width: 46em;
