--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -69,6 +69,7 @@
     transform: translate(-80%, -50%);
   }
 }
+
 .collection {
   width: 37em;
   height: 24.6em;
@@ -98,8 +99,8 @@
     height: 20em;
   }
   @media screen and (max-width: 1550px) {
-      width: 27em;
-      height: 17em;
+    width: 27em;
+    height: 17em;
   }
   @media screen and (max-width: 1320px) {
     width: 25em;
@@ -136,6 +137,10 @@
         left: -10px;
       }
     }
+    .collection-holder {
+      box-shadow: 0px 0px 0px 2px rgba(255, 222, 57, 1);
+      transition: all 0.15s ease-in;
+    }
   }
   &-back {
     &__one {
@@ -169,6 +174,7 @@
     text-align: center;
     overflow: hidden;
     display: block;
+    transition: all 0.15s ease-in;
     @media screen and (min-width: 2100px) {
       width: 45em;
       height: 30em;
@@ -197,7 +203,6 @@
       width: 17em;
       height: 12em;
     }
-    
     &::after {
       content: '';
       position: absolute;
@@ -290,6 +295,5 @@
     }
   }
 }
-
 
 // END: collection
