--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -131,15 +131,15 @@
       &__one {
         top: 5px;
         left: -5px;
+        background-color: color('active');
+        transition: all 0.15s ease-in;
       }
       &__two {
         top: 10px;
         left: -10px;
+        background-color: color('active');
+        transition: all 0.15s ease-in;
       }
-    }
-    .collection-holder {
-      box-shadow: 0px 0px 0px 2px rgba(255, 222, 57, 1);
-      transition: all 0.15s ease-in;
     }
   }
   &-back {
