--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -10,6 +10,9 @@
   white-space: nowrap;
   transform: translate(-50%, -50%);
   z-index: 5;
+  @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
+    height: 19em;
+  }
   @media screen and (min-width: 2100px) {
     height: 34em;
   }
@@ -40,6 +43,11 @@
     display: block;
     font-size: 20px;
     @media screen and (min-width: 2800px) {
+      font-size: 30px;
+    }
+    @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px),
+    only screen and ( min-resolution: 192dpi) and (min-width: 1024px),
+    only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
       font-size: 30px;
     }
   }
@@ -82,6 +90,10 @@
   transform: translateX(0);
   transition: transform 0.5s linear;
   // add class hidden to .collection if navigation not on Collections-nav-list-item
+  @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
+    width: 25em;
+    height: 15em;
+  }
   @media screen and (min-width: 2100px) {
     width: 45em;
     height: 30em;
@@ -175,6 +187,14 @@
     overflow: hidden;
     display: block;
     transition: all 0.15s ease-in;
+    @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
+      width: 17em;
+      height: 12em;
+    }
+    @media only screen and (max-device-pixel-ratio: 0.56) {
+      width: 25em;
+      height: 15em;
+    }
     @media screen and (min-width: 2100px) {
       width: 45em;
       height: 30em;
