--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -10,8 +10,8 @@
   white-space: nowrap;
   transform: translate(-50%, -50%);
   z-index: 5;
-  @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
-    height: 19em;
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    height: 50em;
   }
   @media screen and (min-width: 2100px) {
     height: 34em;
@@ -45,10 +45,9 @@
     @media screen and (min-width: 2800px) {
       font-size: 30px;
     }
-    @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px),
-    only screen and ( min-resolution: 192dpi) and (min-width: 1024px),
-    only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
-      font-size: 30px;
+    @media (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi) {
+      font-size: 40px;
     }
   }
   // add collection-wrapper--title if navigation not on Collections-nav-list-item
@@ -90,9 +89,9 @@
   transform: translateX(0);
   transition: transform 0.5s linear;
   // add class hidden to .collection if navigation not on Collections-nav-list-item
-  @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
-    width: 25em;
-    height: 15em;
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    width: 45em;
+    height: 90em;
   }
   @media screen and (min-width: 2100px) {
     width: 45em;
@@ -187,9 +186,9 @@
     overflow: hidden;
     display: block;
     transition: all 0.15s ease-in;
-    @media only screen and ( min-device-pixel-ratio: 2) and (min-width: 1024px), only screen and ( min-resolution: 192dpi) and (min-width: 1024px), only screen and ( min-resolution: 2dppx) and (min-width: 1024px) {
-      width: 17em;
-      height: 12em;
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      width: 45em;
+      height: 90em;
     }
     @media only screen and (max-device-pixel-ratio: 0.56) {
       width: 25em;
