--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -10,9 +10,9 @@
   white-space: nowrap;
   transform: translate(-50%, -50%);
   z-index: 5;
-  @media screen and (min-aspect-ratio: 5/3) {
-    height: 50em;
-  }
+  // @media screen and (min-aspect-ratio: 5/3) {
+  //   height: 50em;
+  // }
   @media screen and (min-width: 2100px) {
     height: 34em;
   }
@@ -44,10 +44,6 @@
     font-size: 20px;
     @media screen and (min-width: 2800px) {
       font-size: 30px;
-    }
-    @media (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi) {
-      font-size: 40px;
     }
   }
   // add collection-wrapper--title if navigation not on Collections-nav-list-item
@@ -89,10 +85,10 @@
   transform: translateX(0);
   transition: transform 0.5s linear;
   // add class hidden to .collection if navigation not on Collections-nav-list-item
-  @media screen and (min-aspect-ratio: 5/3) {
-    width: 45em;
-    height: 90em;
-  }
+  // @media screen and (min-aspect-ratio: 5/3) {
+  //   width: 45em;
+  //   height: 90em;
+  // }
   @media screen and (min-width: 2100px) {
     width: 45em;
     height: 30em;
@@ -186,10 +182,10 @@
     overflow: hidden;
     display: block;
     transition: all 0.15s ease-in;
-    @media screen and (min-aspect-ratio: 5/3) {
-      width: 45em;
-      height: 90em;
-    }
+    // @media screen and (min-aspect-ratio: 5/3) {
+    //   width: 45em;
+    //   height: 90em;
+    // }
     @media screen and (min-width: 2100px) {
       width: 45em;
       height: 30em;
