--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -8,3 +8,4 @@
 @import 'assets/base-assets/collection.scss';
 @import 'assets/base-assets/catalogue.scss';
 @import 'assets/base-assets/time.scss';
+@import 'assets/base-assets/view-port-media.scss';
