--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -1,163 +1,170 @@
 /*base*/
+
 // breakpoint
 @import 'assets/settings';
 @import 'assets/base-assets/header';
 @import 'assets/base-assets/footer';
-
 html,
 body {
-    height: 100%;
-    font-size: 100%;
+  height: 100%;
+  font-size: 100%;
 }
+
 .wrapper {
-    position: relative;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding-top: 3.2em;
+  z-index: 1;
+  background-size: cover;
+  overflow: hidden;
+  background: url('https://cdn-images-1.medium.com/max/1600/1*aT0YAgCTsQgGAO6K0TK0DA.jpeg');
+  &--inner {
+    background: url('https://i.imgur.com/Z2lWU8K.jpg');
+    background-size: cover;
+  }
+  &__sub {
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-size: cover;
+    background-position: center center;
+    background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
+  }
+}
+
+.clearfix {
+  &:after {
     display: block;
+    clear: both;
+    content: '';
+  }
+}
+
+.content-holder {
     width: 100%;
     height: 100%;
-    padding-top: 3.2em;
-    z-index: 1;
-    background-size: cover;
-    overflow: hidden;
-    background: url('https://cdn-images-1.medium.com/max/1600/1*aT0YAgCTsQgGAO6K0TK0DA.jpeg');
-    &--inner {
-        background: url('https://i.imgur.com/Z2lWU8K.jpg');
-        background-size: cover;
-    }
-    &__sub {
-        position: absolute;
-        z-index: 3;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background-size: cover;
-        background-position: center center;
-        background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
-    }
 }
-.clearfix {
-    &:after {
-        display: block;
-        clear: both;
-        content: '';
-    }
+ .content-container {
+  width: 69em;
+  position: absolute;
+  top: 11em;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 9;
+  @media screen and (min-width: 3840px) {
+    width: 176em;
+  }
+  @media screen and (max-width: 1366px) {
+    width: 53.2em;
+    top: 3em;
+  }
+  @media screen and (max-width: 1110px) {
+    width: 46em;
+  }
 }
-.content-container {
-    width: 69em;
-    position: absolute;
-    top: 11em;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 9;
-    @media screen and (min-width: 3840px) {
-        width: 176em;
-    }
-    @media screen and (max-width: 1366px) {
-        width: 53.2em;
-        top: 3em;
-    }
-    @media screen and (max-width: 1110px) {
-        width: 46em;
-    }
-}
-.myContainer {
-    position: relative;
-    max-width: gridValue('container');
-    margin: 0 auto;
 
-    @extend .clearfix;
+.myContainer {
+  position: relative;
+  max-width: gridValue('container');
+  margin: 0 auto;
+  @extend .clearfix;
 }
+
 .btn {
-    font-family: 'Roboto-Bold';
-    font-size: 1em;
-    color: #c0c0c0;
-    border-radius: 2em;
-    padding: 0.8em 4em;
-    display: inline-block;
-    box-shadow: inset 0 0 0 2px #c0c0c0;
-    transition: all 0.15s ease-in;
-    &:hover {
-        color: #000;
-        background: color('active');
-        box-shadow: 0px 3px 9px #000;
-        .money-icon {
-            background: url('../img/ruble-currency-sign-black.png');
-            background-size: contain;
-            @media screen and (min-width: 3840px) {
-                background: url('../img/ruble-currency-sign-big-black.png');
-                width: 30px;
-                height: 30px;
-            }
-            @media screen and (min-width: 2048px) {
-                width: 15px;
-                height: 15px;
-            }
-        }
-    }
-    &:focus {
-      outline: none;
-      color: #000;
-      background: color('active');
-      box-shadow: 0px 3px 9px #000;
-        .money-icon {
-            background: url('../img/ruble-currency-sign-black.png');
-            background-size: contain;
-            @media screen and (min-width: 2048px) {
-                width: 15px;
-                height: 15px;
-            }
-            @media screen and (min-width: 3840px) {
-                background: url('../img/ruble-currency-sign-big-black.png');
-                width: 30px;
-                height: 30px;
-            }
-        }
-    }
-    &.active {
-        color: #000;
-        background: color('active');
-        box-shadow: 0px 3px 9px #000;
-        .money-icon {
-            background: url('../img/ruble-currency-sign-black.png');
-            @media screen and (min-width: 2048px) {
-                width: 15px;
-                height: 15px;
-            }
-            @media screen and (min-width: 3840px) {
-                background: url('../img/ruble-currency-sign-big-black.png');
-                width: 30px;
-                height: 30px;
-            }
-        }
-    }
-    // add class disable if button was pressed
-    &.disabled {
-        display: none;
-    }
+  font-family: 'Roboto-Bold';
+  font-size: 1em;
+  color: #c0c0c0;
+  border-radius: 2em;
+  padding: 0.8em 4em;
+  display: inline-block;
+  box-shadow: inset 0 0 0 2px #c0c0c0;
+  transition: all 0.15s ease-in;
+  &:hover {
+    color: #000;
+    background: color('active');
+    box-shadow: 0px 3px 9px #000;
     .money-icon {
-        background: url('../img/ruble-currency-sign.png');
+      background: url('../img/ruble-currency-sign-black.png');
+      background-size: contain;
+      @media screen and (min-width: 3840px) {
+        background: url('../img/ruble-currency-sign-big-black.png');
+        width: 30px;
+        height: 30px;
+      }
+      @media screen and (min-width: 2048px) {
         width: 15px;
         height: 15px;
-        display: block;
-        transition: all 0.15s ease-in;
-        display: inline-block;
-        background-size: contain;
-        @media screen and (min-width: 2048px) {
-            width: 15px;
-            height: 15px;
-        }
-        @media screen and (min-width: 3840px) {
-            background: url('../img/ruble-currency-sign-big-light.png');
-            width: 30px;
-            height: 30px;
-        }
-        @media screen and (max-width: 1366px) {
-            width: 11px;
-            height: 11px;
-        }
+      }
     }
+  }
+  &:focus {
+    outline: none;
+    color: #000;
+    background: color('active');
+    box-shadow: 0px 3px 9px #000;
+    .money-icon {
+      background: url('../img/ruble-currency-sign-black.png');
+      background-size: contain;
+      @media screen and (min-width: 2048px) {
+        width: 15px;
+        height: 15px;
+      }
+      @media screen and (min-width: 3840px) {
+        background: url('../img/ruble-currency-sign-big-black.png');
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+  &.active {
+    color: #000;
+    background: color('active');
+    box-shadow: 0px 3px 9px #000;
+    .money-icon {
+      background: url('../img/ruble-currency-sign-black.png');
+      @media screen and (min-width: 2048px) {
+        width: 15px;
+        height: 15px;
+      }
+      @media screen and (min-width: 3840px) {
+        background: url('../img/ruble-currency-sign-big-black.png');
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+  // add class disable if button was pressed
+  &.disabled {
+    display: none;
+  }
+  .money-icon {
+    background: url('../img/ruble-currency-sign.png');
+    width: 15px;
+    height: 15px;
+    display: block;
+    transition: all 0.15s ease-in;
+    display: inline-block;
+    background-size: contain;
+    @media screen and (min-width: 2048px) {
+      width: 15px;
+      height: 15px;
+    }
+    @media screen and (min-width: 3840px) {
+      background: url('../img/ruble-currency-sign-big-light.png');
+      width: 30px;
+      height: 30px;
+    }
+    @media screen and (max-width: 1366px) {
+      width: 11px;
+      height: 11px;
+    }
+  }
 }
-
 
 
 /*END:base*/
