--- a/app/scss/assets/base-assets/view-port-media.scss
+++ b/app/scss/assets/base-assets/view-port-media.scss
@@ -1,440 +1,97 @@
-.viewport-width-max-1024 {
-  .catalogue-wrapper {
-    @media screen and (max-width: 1024px) {
-      left: 55%;
+.viewport-width-1280 {
+  .card {
+    width: 150px;
+    height: 230px;
+    margin: 0 10px 20px 10px;
+    display: inline-block;
+    position: relative;
+    z-index: 0;
+    transition: all 0.15s ease-in;
+    box-shadow: none;
+    transform: translateY(0);
+    transition: transform 0.5s linear;
+    &-body {
+      font-size: 12px;
     }
   }
-  .collection-wrapper {
-    @media screen and (max-width: 1024px) {
-      height: 16em;
-    }
-  }
-  .collection {
-    @media screen and (max-width: 1024px) {
-      width: 17em;
-      height: 12em;
-    }
-    &-holder {
-      @media screen and (max-width: 1024px) {
-        width: 17em;
-        height: 12em;
-      }
-    }
-    &-text {
-      @media screen and (max-width: 1024px) {
-        font-size: 14px;
-      }
-    }
-  }
-}
-
-.viewport-width-max-1110 {}
-
-.viewport-width-max-1280 {
-  .content {
-    &-row {
-      @media screen and (max-width: 1280px) {
-        height: 346px;
-      }
-    }
-  }
-}
-
-.viewport-width-max-1320 {
   .catalogue-inner-title {
+    display: block;
     span {
-      @media screen and (max-width: 1320px) {
-        font-size: 3em;
-      }
+      font-size: 3em;
     }
   }
-  .collection-wrapper {
-    @media screen and (max-width: 1320px) {
-      height: 19em;
-    }
+  .clection-wrapper {
+    height: 19em;
+    position: absolute;
+    left: 95%;
+    top: 50%;
+    padding: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    transform: translate(-50%, -50%);
+    z-index: 5;
   }
   .collection {
-    @media screen and (max-width: 1320px) {
+    width: 25em;
+    height: 15em;
+    display: inline-block;
+    background: #ccc;
+    position: relative;
+    z-index: 9;
+    margin: 0 20px;
+    transform: translateX(0);
+    transition: transform 0.5s linear;
+    &-holder {
+      position: relative;
       width: 25em;
       height: 15em;
-    }
-    &-holder {
-      @media screen and (max-width: 1320px) {
-        width: 25em;
-        height: 15em;
-      }
-    }
-  }
-}
-
-.viewport-width-max-1366 {
-  .card {
-    @media screen and (max-width: 1366px) {
-      width: 150px;
-      height: 230px;
-    }
-    &-body {
-      @media screen and (max-width: 1366px) {
-        font-size: 12px;
-      }
+      z-index: 1;
+      box-shadow: 0 0 10px 0px black;
+      text-align: center;
+      overflow: hidden;
+      display: block;
+      transition: all 0.15s ease-in;
     }
   }
   .content {
+    display: block;
     &-row {
-      @media screen and (max-width: 1366px) {
-        height: 394px;
-      }
+      display: block;
+      font-size: 0;
+      width: 100%;
+      overflow: hidden;
+      padding: 20px 0;
+      height: 346px;
     }
   }
   .description {
-    @media screen and (max-width: 1366px) {
-      font-size: 14px;
-    }
+    font-size: 14px;
   }
   .sort-card {
     &__title {
       .icon {
-        @media screen and (max-width: 1366px) {
-          width: 1.1em;
-          height: 1em;
-        }
-      }
-    }
-  }
-}
-
-.viewport-width-max-1400 {
-  .collection-wrapper {
-    @media screen and (max-width: 1400px) {
-      // add left: 70% if collection more than 2 items and nav is hidden
-      left: 100%;
-      height: 24em;
-    }
-  }
-}
-
-.viewport-width-max-1550 {
-  .collection-wrapper {
-    @media screen and (max-width: 1550px) {
-      height: 19em;
-    }
-  }
-  .collection {
-    @media screen and (max-width: 1550px) {
-      width: 27em;
-      height: 17em;
-    }
-    &-holder {
-      @media screen and (max-width: 1550px) {
-        width: 27em;
-        height: 17em;
+        width: 1.1em;
+        height: 1em;
+        display: inline-block;
+        vertical-align: middle;
+        background: url('../img/down-arrow.png');
+        margin-left: 0.3em;
       }
     }
   }
   .nav-hidden {
-    @media screen and (max-width: 1550px) {
-      left: 2.1em;
-      width: 37em;
-    }
+    height: 100%;
+    display: block;
+    background: url('../img/bg_fx_menu.png') no-repeat;
+    background-position: right center;
+    background-size: cover;
+    left: 3.3em;
+    width: 31em;
+    top: 0;
+    position: absolute;
+    z-index: 9;
   }
-}
-
-.viewport-width-max-1180 {}
-
-.viewport-width-max-1800 {
-  .collection-wrapper {
-    @media screen and (max-width: 1800px) {
-      height: 24em;
-    }
-  }
-  .collection {
-    @media screen and (max-width: 1800px) {
-      width: 30em;
-      height: 20em;
-    }
-    &-holder {
-      @media screen and (max-width: 1800px) {
-        width: 30em;
-        height: 20em;
-      }
-    }
-  }
-  .nav-hidden {
-    @media screen and (max-width: 1800px) {
-      left: 4em;
-      width: 41em;
-    }
-  }
-}
-
-.viewport-width-max-1920 {
-  .content {
-    &-row {
-      @media screen and (max-width: 1920px) {
-        height: 425px;
-      }
-    }
-  }
-  .nav-hidden {
-    @media screen and (max-width: 1920px) {
-      left: 3.5em;
-      width: 44em;
-    }
-  }
-}
-
-.viewport-width-min-1920 {
-  .description {
-    @media screen and (min-width: 1920px) {
-      font-size: 20px;
-    }
-  }
-  .sort-card {
-    &__title {
-      .icon {
-        @media screen and (min-width: 1920px) {
-          width: 0.8em;
-          height: 0.8em;
-        }
-      }
-    }
-  }
-}
-
-.viewport-width-max-2048 {
-  .content {
-    &-row {
-      @media screen and (max-width: 2048px) {
-        height: 497px;
-      }
-    }
-  }
-}
-
-.viewport-width-max-2200 {
-  .nav-hidden {
-    @media screen and (max-width: 2200px) {
-      left: 2.4em;
-      width: 50em;
-    }
-  }
-}
-
-.viewport-width-min-2100 {
-  .collection-wrapper {
-    @media screen and (min-width: 2100px) {
-      height: 34em;
-    }
-  }
-  .collection {
-    @media screen and (min-width: 2100px) {
-      width: 45em;
-      height: 30em;
-    }
-    &-holder {
-      @media screen and (min-width: 2100px) {
-        width: 45em;
-        height: 30em;
-      }
-    }
-  }
-}
-
-.viewport-width-max-2560 {
-  .catalogue-inner-title {
-    span {
-      @media screen and (max-width: 2560px) {
-        font-size: 5em;
-      }
-    }
-  }
-}
-
-.viewport-width-min-2800 {
-  .collection-wrapper {
-    @media screen and (min-width: 2800px) {
-      height: 41em;
-    }
-  }
-  .collection-inner-title {
-    @media screen and (min-width: 2800px) {
-      font-size: 30px;
-    }
-  }
-  .collection {
-    @media screen and (min-width: 2800px) {
-      width: 60em;
-      height: 37em;
-    }
-    &-holder {
-      @media screen and (min-width: 2800px) {
-        width: 60em;
-        height: 37em;
-      }
-    }
-  }
-}
-
-.viewport-width-max-3200 {
-  .nav-hidden {
-    @media screen and (max-width: 3200px) {
-      left: 1.5em;
-      width: 58em;
-    }
-  }
-}
-
-.viewport-width-max-3355 {
-  .nav-hidden {
-    @media screen and (max-width: 3355px) {
-      width: 89em;
-      left: 6em;
-    }
-  }
-}
-
-.viewport-width-max-3840 {
-  .catalogue-inner-title {
-    span {
-      @media screen and (max-width: 3840px) {
-        font-size: 8em;
-      }
-    }
-  }
-  .content {
-    &-row {
-      @media screen and (max-width: 3840px) {
-        height: 1095px;
-      }
-    }
-  }
-  .nav-hidden {
-    @media screen and (max-width: 3840px) {
-      width: 90em;
-      left: 6em;
-    }
-  }
-}
-
-.viewport-width-min-3840 {
-  .card {
-    @media screen and (min-width: 3840px) {
-      width: 520px;
-      height: 840px;
-      margin: 0 20px 35px 20px;
-    }
-    &:focus {
-      .card-body {
-        @media screen and (min-width: 3840px) {
-          box-shadow: -20px 20px color('active');
-        }
-      }
-    }
-    &:hover {
-      .card-body {
-        @media screen and (min-width: 3840px) {
-          box-shadow: -20px 20px color('active');
-        }
-      }
-    }
-    &-body {
-      @media screen and (min-width: 3840px) {
-        font-size: 40px;
-      }
-    }
-  }
-  .collection-wrapper {
-    @media screen and (min-width: 3840px) {
-      height: 60em;
-    }
-  }
-  .collection {
-    @media screen and (min-width: 3840px) {
-      width: 80em;
-      height: 55em;
-    }
-    &-holder {
-      @media screen and (min-width: 3840px) {
-        width: 80em;
-        height: 55em;
-      }
-    }
-    &-count {
-      @media screen and (min-width: 3840px) {
-        width: 120px;
-        height: 90px;
-      }
-      &__icon {
-        @media screen and (min-width: 3840px) {
-          background: url('../img/two-squares-big.png');
-          width: 32px;
-          height: 32px;
-        }
-      }
-      &__count {
-        @media screen and (min-width: 3840px) {
-          font-size: 2.5em;
-        }
-      }
-    }
-    &-text {
-      @media screen and (min-width: 3840px) {
-        font-size: 40px;
-      }
-    }
-  }
-  .description {
-    @media screen and (min-width: 3840px) {
-      font-size: 40px;
-    }
-    &-text {
-      &__count {
-        .icon {
-          @media screen and (min-width: 3840px) {
-            background: url('../img/layers-big.png');
-            width: 24px;
-            height: 24px;
-          }
-        }
-      }
-    }
-  }
-  .sort-card {
-    @media screen and (min-width: 3840px) {
-      top: 0.3em;
-    }
-    &__title {
-      .icon {
-        @media screen and (min-width: 3840px) {
-          background: url('../img/down-chevron.png');
-          width: 0.8em;
-          height: 0.7em;
-        }
-      }
-      &:hover {
-        .icon {
-          @media screen and (min-width: 3840px) {
-            background: url('../img/down-chevron-big-black.png');
-            width: 0.8em;
-            height: 0.7em;
-          }
-        }
-      }
-      &:focus {
-        .icon {
-          @media screen and (min-width: 3840px) {
-            background: url('../img/down-chevron-big-black.png');
-            width: 0.8em;
-            height: 0.7em;
-          }
-        }
-      }
-    }
-  }
-  .nav-hidden {
-    @media screen and (max-width: 3840px) {
-      width: 90em;
-      left: 6em;
-    }
+  .nav {
+    width: 115px;
   }
 }
