add new class viewport-3840

--- a/app/scss/assets/base-assets/view-port-media.scss
+++ b/app/scss/assets/base-assets/view-port-media.scss
@@ -1,3 +1,150 @@
+.viewport-width-3840 {
+  .card {
+    width: 520px;
+    height: 840px;
+    margin: 0 20px 35px 20px;
+    &:focus {
+      .card-body {
+        margin: -9px 9px;
+        box-shadow: -20px 20px color('active');
+      }
+    }
+    &:hover {
+      .card-body {
+        margin: -9px 9px;
+        box-shadow: -20px 20px color('active');
+      }
+    }
+    &-body {
+      font-size: 40px;
+    }
+  }
+  .catalogue-inner-title {
+    display: block;
+    span {
+      font-size: 8em;
+    }
+  }
+  .collection-wrapper {
+    height: 60em;
+    .collection-inner-title {
+      font-size: 30px;
+    }
+  }
+  .collection {
+    width: 80em;
+    height: 55em;
+    &-holder {
+      width: 80em;
+      height: 55em;
+    }
+    &-count {
+      width: 120px;
+      height: 90px;
+      &__icon {
+        background: url('../img/two-squares-big.png');
+        width: 32px;
+        height: 32px;
+      }
+      &__count {
+        font-size: 2.5em;
+      }
+    }
+    &-text {
+      font-size: 40px;
+    }
+  }
+  .content {
+    display: block;
+    &-row {
+      height: 1095px;
+    }
+  }
+  .description {
+    font-size: 40px;
+    &-text {
+      &__count {
+        .icon {
+          background: url('../img/layers-big.png');
+          width: 24px;
+          height: 24px;
+        }
+      }
+    }
+  }
+  .sort-card {
+    top: 0.3em;
+    &__title {
+      &:hover {
+        .icon {
+          background: url('../img/down-chevron-big-black.png');
+          width: 0.8em;
+          height: 0.7em;
+        }
+      }
+      &:focus {
+        .icon {
+          background: url('../img/down-chevron-big-black.png');
+          width: 0.8em;
+          height: 0.7em;
+        }
+      }
+      .icon {
+        background: url('../img/down-chevron.png');
+        width: 0.8em;
+        height: 0.7em;
+      }
+    }
+  }
+  .nav-hidden {
+    width: 90em;
+    left: 6em;
+    &__holder {
+      font-size: 40px;
+    }
+    &-list {
+      &__item {
+        margin-bottom: 25px;
+        span {
+          font-size: 40px;
+          padding: 20px 30px;
+          border-radius: 40px;
+        }
+        &.active {
+          span {
+            font-size: 40px;
+            padding: 20px 30px;
+            border-radius: 40px;
+          }
+        }
+      }
+    }
+  }
+  .nav {
+    width: 290px;
+    &-arrow {
+      width: 100px;
+      height: 100px;
+      border-radius: 50px;
+      &::before {
+        top: 40px;
+        left: 32px;
+        width: 32px;
+        height: 3px;
+      }
+      &::after {
+        top: 61px;
+        left: 32px;
+        width: 32px;
+        height: 3px;
+      }
+    }
+  }
+  .time {
+    font-size: 40px;
+  }
+}
+
 .viewport-width-1280 {
   .card {
     width: 150px;
