--- a/app/scss/assets/base-assets/view-port-media.scss
+++ b/app/scss/assets/base-assets/view-port-media.scss
@@ -245,6 +245,54 @@
   }
 }
 
+.viewport-width-1366 {
+  .card {
+    width: 150px;
+    height: 230px;
+    &-body {
+      font-size: 12px;
+    }
+  }
+  .catalogue-inner-title {
+    span {
+      font-size: 5em;
+    }
+  }
+  .collection-wrapper {
+    height: 19em;
+  }
+  .collection {
+    width: 27em;
+    height: 17em;
+    &-holder {
+      width: 27em;
+      height: 17em;
+    }
+  }
+  .content {
+    &-row {
+      height: 394px;
+    }
+  }
+  .description {
+    font-size: 14px;
+  }
+  .sort-card {
+    &__title {
+      .icon {
+        width: 1.1em;
+        height: 1em;
+      }
+    }
+  }
+  .nav-hidden {
+    left: 2.1em;
+  }
+  .nav {
+    width: 115px;
+  }
+}
+
 .viewport-width-1280 {
   .card {
     width: 150px;
@@ -308,6 +356,73 @@
       width: 100%;
       overflow: hidden;
       padding: 20px 0;
+      height: 346px;
+    }
+  }
+  .description {
+    font-size: 14px;
+  }
+  .sort-card {
+    &__title {
+      .icon {
+        width: 1.1em;
+        height: 1em;
+        display: inline-block;
+        vertical-align: middle;
+        background: url('../img/down-arrow.png');
+        margin-left: 0.3em;
+      }
+    }
+  }
+  .nav-hidden {
+    height: 100%;
+    display: block;
+    background: url('../img/bg_fx_menu.png') no-repeat;
+    background-position: right center;
+    background-size: cover;
+    left: 3.3em;
+    width: 31em;
+    top: 0;
+    position: absolute;
+    z-index: 9;
+  }
+  .nav {
+    width: 115px;
+  }
+}
+
+.viewport-width-1024 {
+  .card {
+    width: 150px;
+    height: 230px;
+    &-body {
+      font-size: 12px;
+    }
+  }
+  .catalogue-wrapper {
+    left: 55%;
+  }
+  .catalogue-inner-title {
+    span {
+      font-size: 5em;
+    }
+  }
+  .collection-wrapper {
+    height: 16em;
+  }
+  .collection {
+    width: 17em;
+    height: 12em;
+    &-holder {
+      width: 17em;
+      height: 12em;
+    }
+    &-text {
+      font-size: 14px;
+    }
+  }
+  .content {
+    &-row {
       height: 346px;
     }
   }
