--- a/app/scss/assets/base-assets/view-port-media.scss
+++ b/app/scss/assets/base-assets/view-port-media.scss
@@ -382,16 +382,9 @@
       font-size: 3em;
     }
   }
-  .cllection-wrapper {
-    top: 50%;
+  .collection-wrapper {
     height: 19em;
     left: 100%;
-    position: absolute;
-    z-index: 5;
-    padding: 20px;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    white-space: nowrap;
   }
   .collection {
     width: 25em;
